--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
   background: #f8f9ff;
-}
+} */
 
 ::-webkit-scrollbar {
   width: 4px;
@@ -15,4 +15,70 @@ body {
 ::-webkit-scrollbar-thumb {
   background-color: #d0d1d2;
   border-radius: 20px;
+}
+
+.dashboard_container {
+  max-width: 1392px;
+  margin: 0 auto;
+}
+
+.footer-gradiant {
+  background: linear-gradient(97.59deg, #162e63 -0.37%, #000613 196.74%);
+}
+
+.animate-move {
+  animation: moveUpDown 3s ease-in-out infinite;
+}
+
+@keyframes moveUpDown {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+/* marquee animation start */
+
+.client_marquee_anim {
+  animation: marqueeH 10s linear infinite;
+}
+
+@keyframes marqueeH {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.client_marquee_anim_wrap:hover .client_marquee_anim {
+  animation-play-state: paused;
+}
+
+.client_marquee_anim_wrap:hover .review_image {
+  filter: grayscale(100%);
+}
+
+.review_card:hover .review_image {
+  filter: none;
+}
+
+/* marquee animation end */
+
+.button::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #121212;
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  border-radius: 50%;
+  z-index: -1;
+  transition: all 0.5s ease;
 }
